--- a/src/Layout.css
+++ b/src/Layout.css
@@ -2,9 +2,18 @@
     box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
 }
 
+.page-container {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+header {
+    position: relative;
+}
+.container {
+    flex: 1;
+}
 .footer {
-    position: absolute;
-    bottom: 0;
     width: 100%;
     white-space: nowrap;
     line-height: 60px;
